namespace ExpenseTrackerGrupo2.Business.Services.Interfaces;

public interface IUserService
{
    // TODO: Complete according external service
}
